Update Hebrew translation
(Old svn revision: 22982)

--- a/po/he.po
+++ b/po/he.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: he\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-12 17:05+0200\n"
-"PO-Revision-Date: 2006-05-31 02:02+0300\n"
+"PO-Revision-Date: 2006-09-02 04:46+0300\n"
 "Last-Translator: Yuval Tanny <tanai@int.gov.il>\n"
 "Language-Team: Hebrew\n"
 "MIME-Version: 1.0\n"
@@ -20,39 +20,36 @@ msgstr ""
 "X-Generator: KBabel 1.11.2\n"
 
 #: ../config/launcher-7.rc.in.h:1
-#, fuzzy
 msgid "Command Prompt"
-msgstr "פקודה"
+msgstr "שורת פקודה"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
-msgstr ""
+msgstr "מסוף"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
-msgstr ""
+msgstr "ערוך קבצי טקסט"
 
 #: ../config/launcher-8.rc.in.h:2 ../plugins/launcher/launcher-dialog.c:102
 msgid "Editor"
 msgstr "עורך"
 
 #: ../config/launcher-9.rc.in.h:1
-#, fuzzy
 msgid "File Manager"
-msgstr "מנהל הקבצים"
+msgstr "סייר קבצים"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
-msgstr ""
+msgstr "ארגן קבצים ותיקיות"
 
 #: ../config/launcher-10.rc.in.h:1
 msgid "Surf the internet"
-msgstr ""
+msgstr "גלוש באינטרנט"
 
 #: ../config/launcher-10.rc.in.h:2
-#, fuzzy
 msgid "Web Browser"
-msgstr "דפדפן העזרה"
+msgstr "דפדפן אינטרנט"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:175
@@ -73,8 +70,7 @@ msgid "Xfce Panel"
 msgstr "לוח Xfce"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:578
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
+msgid "The item will be removed from the panel and its configuration will be lost."
 msgstr "הפריט יוסר מהלוח ומאפייניו יאבדו."
 
 #. configure, hide by default
@@ -225,7 +221,7 @@ msgstr "רוחב מלא"
 
 #: ../panel/panel-dialogs.c:868 ../panel/panel-dialogs.c:1092
 msgid "Span Monitors"
-msgstr ""
+msgstr "החלף מסכים"
 
 #: ../panel/panel-dialogs.c:928 ../panel/panel-dialogs.c:1157
 msgid "Left"
@@ -398,9 +394,8 @@ msgid "Only show minimized applications"
 msgstr "הצגת יישומים ממוזערים בלבד"
 
 #: ../plugins/iconbox/iconbox.c:839
-#, fuzzy
 msgid "Show applications of all workspaces"
-msgstr "הצג _חלונות מכל סביבות העבודה"
+msgstr "הצג יישומים מכל סביבות העבודה"
 
 #: ../plugins/launcher/launcher.c:373 ../plugins/launcher/launcher.c:435
 #, c-format
@@ -560,7 +555,7 @@ msgstr "מספר טורים:"
 
 #: ../plugins/pager/pager.c:364
 msgid "Switch workspaces using the mouse wheel"
-msgstr ""
+msgstr "החלף סביבות עבודה בעזרת גלגלת העכבר"
 
 #: ../plugins/separator/separator.c:255
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -612,7 +607,7 @@ msgstr "השתמש במלוא השטח"
 
 #: ../plugins/tasklist/tasklist.c:464
 msgid "Use flat buttons"
-msgstr ""
+msgstr "השתמש בלחצנים שטוחים"
 
 #: ../plugins/tasklist/tasklist.c:481
 msgid "Show tasks from _all workspaces"
@@ -782,5 +777,3 @@ msgstr "להרחבה זו אין כל שימוש"
 msgid "Xfce 4 Panel Manager"
 msgstr "מנהל לוח Xfce 4"
 
-#~ msgid "Size"
-#~ msgstr "גודל"
