--- a/po/hu.po
+++ b/po/hu.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-12 17:05+0200\n"
-"PO-Revision-Date: 2006-08-12 21:40+0100\n"
+"PO-Revision-Date: 2006-09-02 09:27+0100\n"
 "Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
 "Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -524,7 +524,7 @@ msgstr "_Indításjelentés használata"
 
 #: ../plugins/launcher/launcher-dialog.c:1289
 msgid "The first item in the list is shown on the panel. Additional items will appear in a menu."
-msgstr "Az 1. listaelem a panelon. A többi a menüben."
+msgstr "Az lista 1. eleme a panelon. A többi a menüben."
 
 #: ../plugins/launcher/launcher-dialog.c:1332
 msgid "Program Launcher"
@@ -779,11 +779,11 @@ msgstr "Elérhető ablakok listájának mutatása"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
 msgid "Test Plugin"
-msgstr "Tesztplugin"
+msgstr "Teszt beillesztés"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
-msgstr "Csak teszt célú plugin"
+msgstr "E beillesztés célja csak teszt"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
