--- a/po/gl.po
+++ b/po/gl.po
@@ -6,7 +6,7 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel\n"
+"Project-Id-Version: xfce4-panel 4.3.99.1\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2006-05-29 20:39+0000\n"
 "PO-Revision-Date: 2006-06-06 12:38+0000\n"
