--- a/po/he.po
+++ b/po/he.po
@@ -8,7 +8,7 @@
 # Yuval Tanny <tanai@int.gov.il>, 2004, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: he\n"
+"Project-Id-Version: xfce4-panel 4.3.99.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-12 17:05+0200\n"
 "PO-Revision-Date: 2006-09-02 04:46+0300\n"
