--- a/po/vi.po
+++ b/po/vi.po
@@ -1,57 +1,55 @@
 # Vietnamese translations for xfce4-panel package.
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
+#
 # Lâm Vĩnh Niên <nienvl@yahoo.ca>, 2004.
 # Phan Vĩnh Thịnh <teppi@vnlinux.org>, 2006.
-#
+# Phan Vĩnh Thịnh <teppi82@gmail.com>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.99.1\n"
+"Project-Id-Version: xfce4-panel 4.3.90.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-12 17:05+0200\n"
-"PO-Revision-Date: 2006-04-26 01:37+0400\n"
-"Last-Translator: Phan Vĩnh Thịnh <teppi@vnlinux.org>\n"
-"Language-Team: Vietnamese <vi_VN@googlegroups.com>\n"
+"PO-Revision-Date: 2006-09-05 02:07+0400\n"
+"Last-Translator: Phan Vĩnh Thịnh <teppi82@gmail.com>\n"
+"Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.10\n"
+"X-Generator: KBabel 1.11.2\n"
 "Plural-Forms: nplurals=1; nplural=0\n"
 
 #: ../config/launcher-7.rc.in.h:1
-#, fuzzy
 msgid "Command Prompt"
-msgstr "Câu lệnh"
+msgstr "Dấu nhắc lệnh"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
-msgstr ""
+msgstr "Trình giả lập terminal X"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
-msgstr ""
+msgstr "Soạn thảo văn bản"
 
 #: ../config/launcher-8.rc.in.h:2 ../plugins/launcher/launcher-dialog.c:102
 msgid "Editor"
 msgstr "Trình biên tập"
 
 #: ../config/launcher-9.rc.in.h:1
-#, fuzzy
 msgid "File Manager"
-msgstr "Quản lí tập tin"
+msgstr "Trình quản lí tập tin"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
-msgstr ""
+msgstr "Quản lý tập tin và thư mục"
 
 #: ../config/launcher-10.rc.in.h:1
 msgid "Surf the internet"
-msgstr ""
+msgstr "Duyệt Internet"
 
 #: ../config/launcher-10.rc.in.h:2
-#, fuzzy
 msgid "Web Browser"
-msgstr "Trình duyệt giúp đỡ"
+msgstr "Trình duyệt Web"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:175
@@ -72,8 +70,7 @@ msgid "Xfce Panel"
 msgstr "Panel Xfce"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:578
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
+msgid "The item will be removed from the panel and its configuration will be lost."
 msgstr "Mục này sẽ bị gỡ khỏi thanh panel và cấu hình của nó sẽ mất."
 
 #. configure, hide by default
@@ -202,7 +199,7 @@ msgstr "Không mở được môđun \"%s\""
 
 #: ../panel/panel-dialogs.c:588
 msgid "Add Items to the Panel"
-msgstr ""
+msgstr "Thêm mục vào Panel"
 
 #: ../panel/panel-dialogs.c:618
 msgid ""
@@ -399,9 +396,8 @@ msgid "Only show minimized applications"
 msgstr "Chỉ hiển thị các ứng dụng thu nhỏ"
 
 #: ../plugins/iconbox/iconbox.c:839
-#, fuzzy
 msgid "Show applications of all workspaces"
-msgstr "Hiển thị cửa sổ từ _mọi không gian làm việc"
+msgstr "Hiển thị cửa sổ từ mọi vùng làm việc"
 
 #: ../plugins/launcher/launcher.c:373 ../plugins/launcher/launcher.c:435
 #, c-format
@@ -464,7 +460,7 @@ msgstr "Productivity"
 
 #: ../plugins/launcher/launcher-dialog.c:112
 msgid "Office"
-msgstr ""
+msgstr "Văn phòng"
 
 #: ../plugins/launcher/launcher-dialog.c:113
 msgid "Sound"
@@ -475,9 +471,8 @@ msgid "Terminal"
 msgstr "Trạm cuối"
 
 #: ../plugins/launcher/launcher-dialog.c:115
-#, fuzzy
 msgid "Development"
-msgstr "Nhà phát triển"
+msgstr "Phát triển"
 
 #: ../plugins/launcher/launcher-dialog.c:413
 msgid "Select image file"
@@ -565,7 +560,7 @@ msgstr "Số cột:"
 
 #: ../plugins/pager/pager.c:364
 msgid "Switch workspaces using the mouse wheel"
-msgstr ""
+msgstr "Dùng bánh xe chuột chuyển giữa các vùng làm việc"
 
 #: ../plugins/separator/separator.c:255
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -617,7 +612,7 @@ msgstr "Dùng tất cả không gian có thể"
 
 #: ../plugins/tasklist/tasklist.c:464
 msgid "Use flat buttons"
-msgstr ""
+msgstr "Dùng nút chuột phẳng"
 
 #: ../plugins/tasklist/tasklist.c:481
 msgid "Show tasks from _all workspaces"
@@ -787,5 +782,3 @@ msgstr "Plugin không thực hiện thao tác nào"
 msgid "Xfce 4 Panel Manager"
 msgstr "Trình quản lý thanh Panel Xfce 4"
 
-#~ msgid "Size"
-#~ msgstr "Kích thước"
