update catalan translation
(Old svn revision: 23184)

--- a/po/ca.po
+++ b/po/ca.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.99.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-12 17:05+0200\n"
-"PO-Revision-Date: 2006-05-13 22:16+0200\n"
+"PO-Revision-Date: 2006-09-20 13:11+0200\n"
 "Last-Translator: Pau Rul.lan Ferragut <paurullan@bulma.net>\n"
 "Language-Team: catalan\n"
 "MIME-Version: 1.0\n"
@@ -17,39 +17,36 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../config/launcher-7.rc.in.h:1
-#, fuzzy
 msgid "Command Prompt"
-msgstr "Ordre"
+msgstr "Indicador d’ordres"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
-msgstr ""
+msgstr "Emulador de terminal"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
-msgstr ""
+msgstr "Edita fitxers de text"
 
 #: ../config/launcher-8.rc.in.h:2 ../plugins/launcher/launcher-dialog.c:102
 msgid "Editor"
 msgstr "Editor"
 
 #: ../config/launcher-9.rc.in.h:1
-#, fuzzy
 msgid "File Manager"
-msgstr "Gestió de fitxers"
+msgstr "Gestior de fitxers"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
-msgstr ""
+msgstr "Gestiona fitxers i directoris"
 
 #: ../config/launcher-10.rc.in.h:1
 msgid "Surf the internet"
-msgstr ""
+msgstr "Navega per la xarxa"
 
 #: ../config/launcher-10.rc.in.h:2
-#, fuzzy
 msgid "Web Browser"
-msgstr "Navegador d'ajuda"
+msgstr "Navegador web"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:175
@@ -397,9 +394,8 @@ msgid "Only show minimized applications"
 msgstr "Sols mostra les aplicacions minimitzades"
 
 #: ../plugins/iconbox/iconbox.c:839
-#, fuzzy
 msgid "Show applications of all workspaces"
-msgstr "Mostr_a les finestres de totes les àrees de treball"
+msgstr "Mostra les aplicacions de totes les àrees de treball"
 
 #: ../plugins/launcher/launcher.c:373 ../plugins/launcher/launcher.c:435
 #, c-format
@@ -462,7 +458,7 @@ msgstr "Productivitat"
 
 #: ../plugins/launcher/launcher-dialog.c:112
 msgid "Office"
-msgstr ""
+msgstr "Oficina"
 
 #: ../plugins/launcher/launcher-dialog.c:113
 msgid "Sound"
@@ -473,9 +469,8 @@ msgid "Terminal"
 msgstr "Terminal"
 
 #: ../plugins/launcher/launcher-dialog.c:115
-#, fuzzy
 msgid "Development"
-msgstr "Desenvolupador"
+msgstr "Desenvolupament"
 
 #: ../plugins/launcher/launcher-dialog.c:413
 msgid "Select image file"
@@ -563,7 +558,7 @@ msgstr "Nombre de columnes:"
 
 #: ../plugins/pager/pager.c:364
 msgid "Switch workspaces using the mouse wheel"
-msgstr ""
+msgstr "Commuta entre escriptoris amb la roda del ratolí"
 
 #: ../plugins/separator/separator.c:255
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -615,7 +610,7 @@ msgstr "Usa tot l'espai disponible"
 
 #: ../plugins/tasklist/tasklist.c:464
 msgid "Use flat buttons"
-msgstr ""
+msgstr "Usa botons plans"
 
 #: ../plugins/tasklist/tasklist.c:481
 msgid "Show tasks from _all workspaces"
@@ -786,6 +781,3 @@ msgstr "Aquest connector no té propòsit"
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
 msgstr "Gestor de quadres Xfce4"
-
-#~ msgid "Size"
-#~ msgstr "Mida"
