--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-20  Pau Rul-lan Ferragut <paurullan@bulma.net>
+
+	* ca.po: Updated Catalan translation.
+
 2006-09-07  Jean-François Wauthy <pollux@xfce.org>
 
 	* vi.po: Updated Vietnamese translations
