--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-22  Sylvain Vedrenne <gnu_sylvain@xfce.org>
+
+        * eo.po: Updated Esperanto translations, by Jarbas Araujo
+        <jarbasaraujojr@yahoo.com.br>.
+
 2006-09-20  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
 	* ca.po: Updated Catalan translation.
