--- a/po/eo.po
+++ b/po/eo.po
@@ -2,14 +2,16 @@
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Sylvain Vedrenne <gnu_sylvain@xfce.org>, 2005.
+# Antono Vasiljev <antono.vasiljev@gmail.com>, 2006.
+# Jarbas Araujo Jr <jarbasaraujojr@yahoo.com.br>, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.99.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-12 17:05+0200\n"
-"PO-Revision-Date: 2006-08-03 04:10+0300\n"
-"Last-Translator: Antono Vasiljev <antonalist@gmail.com>\n"
+"PO-Revision-Date: 2006-09-21 12:14+0200\n"
+"Last-Translator: Jarbas Araujo Jr <jarbasaraujojr@yahoo.com.br>\n"
 "Language-Team: Esperanto <debian-l10n-esperanto@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,9 +19,8 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../config/launcher-7.rc.in.h:1
-#, fuzzy
 msgid "Command Prompt"
-msgstr "Komando"
+msgstr "Komandinvito"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
@@ -47,7 +48,7 @@ msgstr "Krozu tra la Interreto"
 
 #: ../config/launcher-10.rc.in.h:2
 msgid "Web Browser"
-msgstr "TTT-foliumilo"
+msgstr "TTT-Krozilo"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:175
@@ -117,7 +118,7 @@ msgstr "Pri la Xfce Panelo"
 
 #: ../panel/panel-app.c:243 ../panel/panel-app.c:752
 msgid "Exit Xfce Panel?"
-msgstr "Ĉu Audiaŭu la Xfce Panelon?"
+msgstr "Ĉu Audiaŭi la Xfce Panelon?"
 
 #: ../panel/panel-app.c:753
 msgid "You can't remove the last panel. Would you like to exit the program?"
@@ -126,7 +127,7 @@ msgstr "Vi ne povas forigi la lastan panelon. Ĉu vi volas adiaŭi la programon?
 #: ../panel/panel-app.c:780
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr "Ĉu Forigu Panelon \"%d\"?"
+msgstr "Ĉu Forigi Panelon \"%d\"?"
 
 #: ../panel/panel-app.c:784
 msgid "The selected panel and all its items will be removed."
@@ -470,9 +471,8 @@ msgid "Terminal"
 msgstr "Terminalo"
 
 #: ../plugins/launcher/launcher-dialog.c:115
-#, fuzzy
 msgid "Development"
-msgstr "Programisto"
+msgstr "Programado"
 
 #: ../plugins/launcher/launcher-dialog.c:413
 msgid "Select image file"
@@ -527,6 +527,10 @@ msgid ""
 "\n"
 "For help using Zero Install, see http://0install.net"
 msgstr ""
+"Neeblis lanĉi 0lauch:\n"
+"%s\n"
+"\n"
+"Helpon uzanta \"Zero Install\", trovu ĉe http://0install.net"
 
 #: ../plugins/launcher/launcher-dialog.c:1487
 msgid ""
@@ -534,6 +538,8 @@ msgid ""
 "in the meantime. Not adding launcher (but any files downloaded have not been "
 "lost)."
 msgstr ""
+"La \"Zero Install\" GUI finiĝis sed la lanĉildialogo malaperis dumrule."
+"Lanĉilo ne estis aldonata. ( sed neniu ensxarĝita dosiero perdiĝis )"
 
 #: ../plugins/launcher/launcher-dialog.c:1894
 msgid "Select file"
@@ -605,7 +611,7 @@ msgstr "Uzu la tutan disponeblan spacon"
 
 #: ../plugins/tasklist/tasklist.c:464
 msgid "Use flat buttons"
-msgstr ""
+msgstr "Uzu glatajn butonojn"
 
 #: ../plugins/tasklist/tasklist.c:481
 msgid "Show tasks from _all workspaces"
@@ -669,12 +675,12 @@ msgid ""
 "<i>Urgency notification</i> will blink the button when an application needs "
 "attention."
 msgstr ""
+"<i>Urĝavizo</i> ekbriligos la butonon kiam aplikajxo necesas atenton"
 
 #. Button Urgency Notification
 #: ../plugins/windowlist/windowlist-dialog.c:155
-#, fuzzy
 msgid "Urgency Notification"
-msgstr "Uzu lanĉan informigon"
+msgstr "Urĝavizo"
 
 #: ../plugins/windowlist/windowlist-dialog.c:162
 msgid "_Disabled"
@@ -685,18 +691,16 @@ msgid "For _other workspaces"
 msgstr "Por a_liaj laborspacoj"
 
 #: ../plugins/windowlist/windowlist-dialog.c:180
-#, fuzzy
 msgid "For _all workspaces"
-msgstr "Montru la taskojn de ĉiuj l_aborspacoj"
+msgstr "Por ĉiuj l_aborspacoj"
 
 #: ../plugins/windowlist/windowlist-dialog.c:194
-#, fuzzy
 msgid "_Icon button"
-msgstr "Piktogramaj B_utonoj"
+msgstr "Piktograma B_utono"
 
 #: ../plugins/windowlist/windowlist-dialog.c:201
 msgid "A_rrow button"
-msgstr "S_ag-butonoj"
+msgstr "S_aga butono"
 
 #: ../plugins/windowlist/windowlist-dialog.c:219
 msgid "Show _windows from all workspaces"
