various translations updates
(Old svn revision: 23198)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,7 +1,14 @@
+2006-09-23  Jean-François Wauthy <pollux@xfce.org>
+
+	* de.po: Updated German translations by Ronny Steiner
+	<sir.steiner@gmx.de>
+	* fr.po: Updated French translations by Maximilian Schleiss
+	<maxschleiss@bluewin.ch>
+
 2006-09-22  Sylvain Vedrenne <gnu_sylvain@xfce.org>
 
-        * eo.po: Updated Esperanto translations, by Jarbas Araujo
-        <jarbasaraujojr@yahoo.com.br>.
+	* eo.po: Updated Esperanto translations, by Jarbas Araujo 
+	<jarbasaraujojr@yahoo.com.br>.
 
 2006-09-20  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
