--- a/po/de.po
+++ b/po/de.po
@@ -26,7 +26,7 @@ msgstr "X-Terminalemulator"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
-msgstr "Testdateien bearbeiten"
+msgstr "Textdateien bearbeiten"
 
 #: ../config/launcher-8.rc.in.h:2 ../plugins/launcher/launcher-dialog.c:102
 msgid "Editor"
@@ -70,7 +70,7 @@ msgstr "Xfce-Leiste"
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
 msgstr ""
-"Das Element wird aus der Leiste entfernt, und seine Einstellungen gehen "
+"Das Element wird aus der Leiste entfernt und seine Einstellungen gehen "
 "verloren."
 
 #. configure, hide by default
@@ -209,7 +209,7 @@ msgid ""
 "Drag items from the list to a panel or remove them by dragging them back to "
 "the list."
 msgstr ""
-"Einträge von der Liste auf die Leiste ziehen oder von der Leiste zurück auf "
+"Einträge von der Liste auf die Leiste ziehen oder von der Leiste zurück in "
 "die Liste."
 
 #: ../panel/panel-dialogs.c:635
@@ -666,7 +666,7 @@ msgstr "Arbeitsfläche %d entfernen?"
 #: ../plugins/windowlist/windowlist.c:547
 #, c-format
 msgid "Remove Workspace '%s'"
-msgstr "Arbeitsfläche »s« entfernen?"
+msgstr "Arbeitsfläche »%s« entfernen?"
 
 #. Windowlist Settings
 #: ../plugins/windowlist/windowlist-dialog.c:121
@@ -726,7 +726,7 @@ msgstr "Leiste"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
-msgstr "Aktive Knöpfe"
+msgstr "Aktionsknöpfe"
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
 msgid "Log out or lock the screen"
