--- a/po/fr.po
+++ b/po/fr.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the xfce4-panel package.
 # Olivier Fourdan <fourdan@xfce.org>, 2004.
 # Collet Etienne <xanaxlnx@gmail.com>, 2005.
+# Maximilian Schleiss <maxschleiss@bluewin.ch>, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.99.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-12 17:05+0200\n"
-"PO-Revision-Date: 2006-08-19 18:36+0100\n"
+"PO-Revision-Date: 2006-09-15 17:46+0100\n"
 "Last-Translator: Maximilian Schleiss <maxschleiss@bluewin.ch>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -18,7 +19,7 @@ msgstr ""
 
 #: ../config/launcher-7.rc.in.h:1
 msgid "Command Prompt"
-msgstr "Ligne de Commande"
+msgstr "Ligne de commande"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
@@ -94,17 +95,17 @@ msgstr "Supprimer"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:833
 msgid "Add New Item"
-msgstr "Ajouter un Nouvel Élément"
+msgstr "Ajouter un nouvel élément"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:845
 #: ../panel/panel.c:662
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:1
 msgid "Customize Panel"
-msgstr "Configurer le Pannneau"
+msgstr "Configurer le panneau"
 
 #: ../panel/panel.c:673
 msgid "Add Items"
-msgstr "Ajouter des Éléments"
+msgstr "Ajouter des éléments"
 
 #: ../panel/panel.c:689
 #: ../plugins/actions/actions.c:417
@@ -155,7 +156,7 @@ msgid ""
 msgstr ""
 "\n"
 " Le panneau Xfce\n"
-" Version %s\n"
+" version %s\n"
 "\n"
 " Élément de l'environnement de bureau Xfce\n"
 " http://www.xfce.org\n"
@@ -169,7 +170,7 @@ msgid ""
 " Usage: %s [OPTIONS]\n"
 "\n"
 msgstr ""
-" Utilisation: %s [OPTIONS]\n"
+" Utilisation : %s [OPTIONS]\n"
 "\n"
 
 #. Only translate the descriptions, not the options itself
@@ -204,11 +205,11 @@ msgstr "Impossible de créer l'élément \"%s\" du panneau."
 
 #: ../panel/panel-dialogs.c:588
 msgid "Add Items to the Panel"
-msgstr "Ajouter des Éléments au Panneau"
+msgstr "Ajouter des éléments au panneau"
 
 #: ../panel/panel-dialogs.c:618
 msgid "Drag items from the list to a panel or remove them by dragging them back to the list."
-msgstr "Faire glisser des éléments de la liste vers le panneau ou les enlever en les refaisant glisser vers la liste."
+msgstr "Faire glisser des éléments de la liste vers le panneau ou les supprimer en les glissant vers la liste."
 
 #: ../panel/panel-dialogs.c:635
 msgid "Available Items"
@@ -232,22 +233,22 @@ msgstr "Étendre à tous les moniteurs"
 #: ../panel/panel-dialogs.c:928
 #: ../panel/panel-dialogs.c:1157
 msgid "Left"
-msgstr "à Gauche"
+msgstr "à gauche"
 
 #: ../panel/panel-dialogs.c:930
 #: ../panel/panel-dialogs.c:1159
 msgid "Right"
-msgstr "à Droite"
+msgstr "à droite"
 
 #: ../panel/panel-dialogs.c:935
 #: ../panel/panel-dialogs.c:1164
 msgid "Top"
-msgstr "en Haut"
+msgstr "en haut"
 
 #: ../panel/panel-dialogs.c:937
 #: ../panel/panel-dialogs.c:1166
 msgid "Bottom"
-msgstr "en Bas"
+msgstr "en bas"
 
 #. position
 #: ../panel/panel-dialogs.c:965
@@ -288,7 +289,7 @@ msgstr "Sur les deux côtés"
 
 #: ../panel/panel-dialogs.c:1234
 msgid "Select Monitor"
-msgstr "Sélerctionner le moniteur"
+msgstr "Sélectionner le moniteur"
 
 #. Button Layout
 #: ../panel/panel-dialogs.c:1352
@@ -301,11 +302,11 @@ msgstr "Apparence"
 #. size
 #: ../panel/panel-dialogs.c:1363
 msgid "Size (pixels):"
-msgstr "Taille (pixels):"
+msgstr "Taille (pixels) :"
 
 #: ../panel/panel-dialogs.c:1386
 msgid "Transparency (%):"
-msgstr "Transparence (%):"
+msgstr "Transparence (%) :"
 
 #: ../panel/panel-dialogs.c:1410
 msgid "Make active panel opaque"
@@ -388,11 +389,11 @@ msgstr "Options de l'horloge"
 
 #: ../plugins/clock/clock.c:493
 msgid "Use 24-_hour clock"
-msgstr "Utiliser 24 _heure dans l'horloge"
+msgstr "Utiliser 24 _heures dans l'horloge"
 
 #: ../plugins/clock/clock.c:500
 msgid "Show AM/PM"
-msgstr "Montrer AM/PM"
+msgstr "Afficher AM/PM"
 
 #: ../plugins/clock/clock.c:507
 msgid "Display seconds"
@@ -426,7 +427,7 @@ msgstr "Erreur dans la commande \"%s\""
 #: ../plugins/launcher/launcher.c:1300
 #: ../plugins/launcher/launcher-dialog.c:1167
 msgid "New Item"
-msgstr "Nouvel Élément"
+msgstr "Nouvel élément"
 
 #: ../plugins/launcher/launcher.c:747
 #: ../plugins/launcher/launcher.c:1301
@@ -435,7 +436,7 @@ msgstr "Cet élément n'a pas encore été configuré"
 
 #: ../plugins/launcher/launcher-dialog.c:101
 msgid "Default"
-msgstr "Par Défaut"
+msgstr "Par défaut"
 
 #: ../plugins/launcher/launcher-dialog.c:103
 msgid "File management"
@@ -515,7 +516,7 @@ msgstr "Commande"
 
 #: ../plugins/launcher/launcher-dialog.c:689
 msgid "Run in _terminal"
-msgstr "Éxécuter dans un _terminal"
+msgstr "Exécuter dans un _terminal"
 
 #: ../plugins/launcher/launcher-dialog.c:707
 msgid "Use _startup notification"
@@ -523,7 +524,7 @@ msgstr "Utiliser la _notification de démarrage"
 
 #: ../plugins/launcher/launcher-dialog.c:1289
 msgid "The first item in the list is shown on the panel. Additional items will appear in a menu."
-msgstr "Le premier élément dans la liste est montré sur le panneau. Les éléments additionnels apparaîtront dans un menu."
+msgstr "Le premier élément dans la liste est affiché sur le panneau. Les éléments additionnels apparaîtront dans un menu."
 
 #: ../plugins/launcher/launcher-dialog.c:1332
 msgid "Program Launcher"
@@ -538,14 +539,14 @@ msgid ""
 "\n"
 "For help using Zero Install, see http://0install.net"
 msgstr ""
-"Échec à l'exécution de 0launch:\n"
+"Échec à l'exécution de 0launch :\n"
 "%s\n"
 "\n"
 "Allez à http://0install.net pour de l'aide à l'utilisation de Zero Install"
 
 #: ../plugins/launcher/launcher-dialog.c:1487
 msgid "The Zero Install GUI has finished, but the launcher dialog has disappeared in the meantime. Not adding launcher (but any files downloaded have not been lost)."
-msgstr "Zero Install GUI a fini, entretemps la fenêtre du lanceur a disparu. Le lanceur n'est pas ajouté (les fichiers téléchargés ne sont pas perdus)."
+msgstr "Zero Install GUI a fini, entre-temps la fenêtre du lanceur a disparu. Le lanceur n'est pas ajouté (les fichiers téléchargés ne sont pas perdus)."
 
 #: ../plugins/launcher/launcher-dialog.c:1894
 msgid "Select file"
@@ -597,7 +598,7 @@ msgstr "Il y a déjà une zone de notification système active pour cet écran"
 #: ../plugins/systray/systray.c:90
 #, c-format
 msgid "Unable to register system tray: %s"
-msgstr "Impossible d'activer le système de notification: %s"
+msgstr "Impossible d'activer le système de notification : %s"
 
 #: ../plugins/systray/systray.c:378
 #: ../plugins/systray/systray.desktop.in.in.h:2
@@ -612,7 +613,7 @@ msgstr "Liste des tâches"
 
 #: ../plugins/tasklist/tasklist.c:440
 msgid "Minimum Width:"
-msgstr "Largeur minimum:"
+msgstr "Largeur minimum :"
 
 #: ../plugins/tasklist/tasklist.c:455
 msgid "Use all available space"
@@ -647,12 +648,12 @@ msgstr "Toujours regrouper les tâches"
 #: ../plugins/windowlist/windowlist.c:229
 #, c-format
 msgid "Are you sure you want to remove workspace %d?"
-msgstr "Êtes-vous sûr de vouloir supprimer l'espace de travail '%d'?"
+msgstr "Êtes-vous sûr de vouloir supprimer l'espace de travail '%d' ?"
 
 #: ../plugins/windowlist/windowlist.c:230
 #, c-format
 msgid "Are you sure you want to remove workspace '%s'?"
-msgstr "Êtes-vous sûr de vouloir supprimer l'espace de travail '%s'?"
+msgstr "Êtes-vous sûr de vouloir supprimer l'espace de travail '%s' ?"
 
 #: ../plugins/windowlist/windowlist.c:425
 #, c-format
@@ -662,7 +663,7 @@ msgstr "Espace de travail %d"
 #: ../plugins/windowlist/windowlist.c:527
 #: ../plugins/windowlist/windowlist.c:533
 msgid "Add workspace"
-msgstr "Ajouter espace de travail"
+msgstr "Ajouter un espace de travail"
 
 #: ../plugins/windowlist/windowlist.c:546
 #, c-format
@@ -780,7 +781,7 @@ msgstr "Montrer la liste des fenêtres disponibles"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
 msgid "Test Plugin"
-msgstr "Tester le Greffon"
+msgstr "Tester le greffon"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
@@ -788,7 +789,7 @@ msgstr "Ce greffon n'a aucun but"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
-msgstr "Gestionnaire du Panneau Xfce 4"
+msgstr "Gestionnaire du panneau Xfce 4"
 
 #~ msgid "Size"
 #~ msgstr "Taille"
