Updated zh_TW translations.
(Old svn revision: 23217)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-27  Hydonsingore Cia <hydonsingore@educities.edu.tw>
+
+	* zh_TW.po: Updated traditional Chinese translations for correcting
+	  date format.
+
 2006-09-23  Jean-François Wauthy <pollux@xfce.org>
 
 	* de.po: Updated German translations by Ronny Steiner
