--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.99.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-12 17:05+0200\n"
-"PO-Revision-Date: 2006-08-12 11:12+0800\n"
+"PO-Revision-Date: 2006-09-27 23:36+0800\n"
 "Last-Translator: Hydonsingore Cia <hydonsingore@educities.edu.tw>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
@@ -349,7 +349,7 @@ msgstr "離開並鎖住螢幕"
 #.
 #: ../plugins/clock/clock.c:121
 msgid "%A %d %B %Y"
-msgstr "%Y年%B月%d日　%A"
+msgstr "%Y年%B%d日　%A"
 
 #  set names to use in option menus
 #: ../plugins/clock/clock.c:446 ../plugins/clock/clock.desktop.in.in.h:1
