--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-13  Pau Rul-lan Ferragut <paurullan@bulma.net>
+
+	* ko.po: Updated Korean ByungHyun Choi
+	<byunghyun.choi@gmail.com>
+	
 2006-09-27  Hydonsingore Cia <hydonsingore@educities.edu.tw>
 
 	* zh_TW.po: Updated traditional Chinese translations for correcting
