--- a/po/dz.po
+++ b/po/dz.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel\n"
+"Project-Id-Version: xfce4-panel 4.3.99.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-09-02 17:22+0200\n"
 "PO-Revision-Date: 2006-10-24 20:31+0530\n"
