--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2006-11-15  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* es.po: Updated the Spanish translation
+	by Rudy Godoy <rudy@stone-head.org>
+	* fr.po: Modified description text
+
 2006-10-28  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
 	* dz.po: add Dzongkha translation by Dzongkha team
