--- a/po/es.po
+++ b/po/es.po
@@ -1,55 +1,52 @@
-# Spanish translations for xfce4-panel package.
+# Spanish translation of the xfce4-panel package.
 # Copyright (C) 2002-2006 The Xfce development team.
-# This file is distributed under the same license as the xfce4-panelpackage.
+# This file is distributed under the same license as the xfce4-panel package.
 # Edscott Wilson García <edscott@xfce.org>, 2003-2004.
-# Rudy Godoy <rudy@stone-head.org>, 2005.
+# Rudy Godoy <rudy@stone-head.org>, 2005, 2006
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.99.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-12 17:05+0200\n"
-"PO-Revision-Date: 2005-11-07 22:12+0900\n"
-"Last-Translator: Rudy Godoy <rudy@kernel-panik.org>\n"
+"PO-Revision-Date: 2006-11-14 18:54-0500\n"
+"Last-Translator: Rudy Godoy <rudy@stone-head.org>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../config/launcher-7.rc.in.h:1
-#, fuzzy
 msgid "Command Prompt"
-msgstr "Orden"
+msgstr "Línea de ordenes"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
-msgstr ""
+msgstr "Emulador de terminal para X"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
-msgstr ""
+msgstr "Editar ficheros de texto"
 
 #: ../config/launcher-8.rc.in.h:2 ../plugins/launcher/launcher-dialog.c:102
 msgid "Editor"
 msgstr "Editor"
 
 #: ../config/launcher-9.rc.in.h:1
-#, fuzzy
 msgid "File Manager"
-msgstr "Gestión de archivos"
+msgstr "Gestor de ficheros"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
-msgstr ""
+msgstr "Gestione ficheros y carpetas"
 
 #: ../config/launcher-10.rc.in.h:1
 msgid "Surf the internet"
-msgstr ""
+msgstr "Navegue en Internet"
 
 #: ../config/launcher-10.rc.in.h:2
-#, fuzzy
 msgid "Web Browser"
-msgstr "Navegador de ayuda"
+msgstr "Navegador web"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:175
@@ -85,18 +82,16 @@ msgid "About"
 msgstr "Acerca de"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:796
-#, fuzzy
 msgid "Move"
-msgstr "Eliminar"
+msgstr "Mover"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:816
 msgid "Remove"
 msgstr "Eliminar"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:833
-#, fuzzy
 msgid "Add New Item"
-msgstr "Nuevo elemento"
+msgstr "Añadir nuevo elemento"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:845 ../panel/panel.c:662
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:1
@@ -105,7 +100,7 @@ msgstr "Personalizar panel"
 
 #: ../panel/panel.c:673
 msgid "Add Items"
-msgstr ""
+msgstr "Añadir elementos"
 
 #: ../panel/panel.c:689 ../plugins/actions/actions.c:417
 msgid "Quit"
@@ -141,7 +136,7 @@ msgid "Developer"
 msgstr "Desarrollador"
 
 #: ../panel/main.c:46
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " Xfce Panel %s\n"
@@ -153,7 +148,7 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-" El panel de Xfce\n"
+" El panel de Xfce %s\n"
 "\n"
 " Parte del entorno de escritorio Xfce\n"
 " http://www.xfce.org\n"
@@ -172,7 +167,6 @@ msgstr ""
 
 #. Only translate the descriptions, not the options itself
 #: ../panel/main.c:55
-#, fuzzy
 msgid ""
 " OPTIONS\n"
 " -h, --help      Show this message and exit\n"
@@ -194,6 +188,7 @@ msgstr ""
 " -q, --quit      Finaliza la sesión\n"
 " -x, --exit      Finaliza los paneles\n"
 " -a, --add       Añade nuevos elementos\n"
+"\n"
 
 #: ../panel/panel-dialogs.c:179
 #, c-format
@@ -202,7 +197,7 @@ msgstr "No se pudo abrir el módulo «%s»."
 
 #: ../panel/panel-dialogs.c:588
 msgid "Add Items to the Panel"
-msgstr ""
+msgstr "Añadir elementos al panel"
 
 #: ../panel/panel-dialogs.c:618
 msgid ""
@@ -213,24 +208,20 @@ msgstr ""
 "desde éste hacia la lista."
 
 #: ../panel/panel-dialogs.c:635
-#, fuzzy
 msgid "Available Items"
 msgstr "Elementos disponibles"
 
 #: ../panel/panel-dialogs.c:860 ../panel/panel-dialogs.c:1084
-#, fuzzy
 msgid "Normal Width"
-msgstr "_Todo el ancho"
+msgstr "Ancho normal"
 
 #: ../panel/panel-dialogs.c:862 ../panel/panel-dialogs.c:1086
-#, fuzzy
 msgid "Full Width"
-msgstr "_Todo el ancho"
+msgstr "Todo el ancho"
 
 #: ../panel/panel-dialogs.c:868 ../panel/panel-dialogs.c:1092
-#, fuzzy
 msgid "Span Monitors"
-msgstr "Monitor"
+msgstr "Dividir monitores"
 
 #: ../panel/panel-dialogs.c:928 ../panel/panel-dialogs.c:1157
 msgid "Left"
@@ -278,18 +269,16 @@ msgid "Vertical"
 msgstr "Vertical"
 
 #: ../panel/panel-dialogs.c:1141
-#, fuzzy
 msgid "Handle:"
-msgstr "Gestionar posición"
+msgstr "Gestionar:"
 
 #: ../panel/panel-dialogs.c:1153
 msgid "At both sides"
 msgstr "A ambos lados"
 
 #: ../panel/panel-dialogs.c:1234
-#, fuzzy
 msgid "Select Monitor"
-msgstr "Monitor"
+msgstr "Elija monitor"
 
 #. Button Layout
 #: ../panel/panel-dialogs.c:1352 ../plugins/clock/clock.c:459
@@ -301,16 +290,15 @@ msgstr "Aspecto"
 #. size
 #: ../panel/panel-dialogs.c:1363
 msgid "Size (pixels):"
-msgstr ""
+msgstr "Tamaño (pixels):"
 
 #: ../panel/panel-dialogs.c:1386
-#, fuzzy
 msgid "Transparency (%):"
-msgstr "Transparencia"
+msgstr "Transparencia (%):"
 
 #: ../panel/panel-dialogs.c:1410
 msgid "Make active panel opaque"
-msgstr ""
+msgstr "Panel activo opaco"
 
 #: ../panel/panel-dialogs.c:1449 ../panel/panel-dialogs.c:1485
 #: ../panel/panel-dialogs.c:1510
@@ -328,9 +316,8 @@ msgstr "Nuevo panel"
 
 #: ../panel/panel-dialogs.c:1599
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:2
-#, fuzzy
 msgid "Panel Manager"
-msgstr "Tipo de panel"
+msgstr "Gestor de panel"
 
 #: ../plugins/actions/actions.c:383
 msgid "Panel Actions"
@@ -407,9 +394,8 @@ msgid "Only show minimized applications"
 msgstr "Mostrar únicamente aplicaciones minimizadas"
 
 #: ../plugins/iconbox/iconbox.c:839
-#, fuzzy
 msgid "Show applications of all workspaces"
-msgstr "Mostrar t_areas de todos los escritorios virtuales"
+msgstr "Mostrar aplicaciones de todos los escritorios virtuales"
 
 #: ../plugins/launcher/launcher.c:373 ../plugins/launcher/launcher.c:435
 #, c-format
@@ -419,7 +405,7 @@ msgstr "No se pudo ejecutar «%s»."
 #: ../plugins/launcher/launcher.c:398
 #, c-format
 msgid "Error in command \"%s\""
-msgstr ""
+msgstr "Fallo en orden «%s»"
 
 #: ../plugins/launcher/launcher.c:673 ../plugins/launcher/launcher.c:1300
 #: ../plugins/launcher/launcher-dialog.c:1167
@@ -472,7 +458,7 @@ msgstr "Productividad"
 
 #: ../plugins/launcher/launcher-dialog.c:112
 msgid "Office"
-msgstr ""
+msgstr "Oficina"
 
 #: ../plugins/launcher/launcher-dialog.c:113
 msgid "Sound"
@@ -483,9 +469,8 @@ msgid "Terminal"
 msgstr "Terminal"
 
 #: ../plugins/launcher/launcher-dialog.c:115
-#, fuzzy
 msgid "Development"
-msgstr "Desarrollador"
+msgstr "Desarrollo"
 
 #: ../plugins/launcher/launcher-dialog.c:413
 msgid "Select image file"
@@ -540,6 +525,10 @@ msgid ""
 "\n"
 "For help using Zero Install, see http://0install.net"
 msgstr ""
+"Fallo al ejecutar Olaunch:\n"
+"%s\n"
+"\n"
+"Para ayuda en el uso de «Zero Install», véase http://0install.net"
 
 #: ../plugins/launcher/launcher-dialog.c:1487
 msgid ""
@@ -547,6 +536,9 @@ msgid ""
 "in the meantime. Not adding launcher (but any files downloaded have not been "
 "lost)."
 msgstr ""
+"La interfaz gráfico de Zero Install ha finalizado pero el diálogo de\n"
+"arranque ha desaparecido durante el proceso. No se añade un cargador\n"
+"(no se han perdido los ficheros que se hayan descargado)."
 
 #: ../plugins/launcher/launcher-dialog.c:1894
 msgid "Select file"
@@ -566,13 +558,12 @@ msgstr "Número de columnas"
 
 #: ../plugins/pager/pager.c:364
 msgid "Switch workspaces using the mouse wheel"
-msgstr ""
+msgstr "Intercambiar escritorios virtuales con la rueda del ratón"
 
 #: ../plugins/separator/separator.c:255
 #: ../plugins/separator/separator.desktop.in.in.h:2
-#, fuzzy
 msgid "Separator or Spacing"
-msgstr "Separador"
+msgstr "Separador o espaciador"
 
 #: ../plugins/separator/separator.c:277
 msgid "_Draw Separator"
@@ -584,11 +575,11 @@ msgstr "_Expandir"
 
 #: ../plugins/showdesktop/showdesktop.c:32
 msgid "Restore hidden windows"
-msgstr ""
+msgstr "Restaurar ventanas ocultas"
 
 #: ../plugins/showdesktop/showdesktop.c:33
 msgid "Hide windows and show desktop"
-msgstr ""
+msgstr "Ocultar ventansa y mostrar escritorio"
 
 #: ../plugins/systray/systray.c:69 ../plugins/systray/systray.c:84
 msgid "There is already a system tray running on this screen"
@@ -602,7 +593,7 @@ msgstr "No se pudo registrar la bandeja de iconos: %s"
 #: ../plugins/systray/systray.c:378
 #: ../plugins/systray/systray.desktop.in.in.h:2
 msgid "System Tray"
-msgstr ""
+msgstr "Bandeja de sistema"
 
 #: ../plugins/tasklist/tasklist.c:406 ../plugins/tasklist/tasklist.c:477
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
@@ -611,15 +602,15 @@ msgstr "Lista de tareas"
 
 #: ../plugins/tasklist/tasklist.c:440
 msgid "Minimum Width:"
-msgstr ""
+msgstr "Ancho mínimo:"
 
 #: ../plugins/tasklist/tasklist.c:455
 msgid "Use all available space"
-msgstr ""
+msgstr "Usar todo el espacio disponible"
 
 #: ../plugins/tasklist/tasklist.c:464
 msgid "Use flat buttons"
-msgstr ""
+msgstr "Usar los botones planos"
 
 #: ../plugins/tasklist/tasklist.c:481
 msgid "Show tasks from _all workspaces"
@@ -644,96 +635,92 @@ msgstr "Siempre agrupar tareas"
 #: ../plugins/windowlist/windowlist.c:229
 #, c-format
 msgid "Are you sure you want to remove workspace %d?"
-msgstr ""
+msgstr "¿Está seguro que desea eliminar el escritorio virtual «%d»?"
 
 #: ../plugins/windowlist/windowlist.c:230
 #, c-format
 msgid "Are you sure you want to remove workspace '%s'?"
-msgstr ""
+msgstr "¿Está seguro que desea eliminar el escritorio virtual «%s»?"
 
 #: ../plugins/windowlist/windowlist.c:425
-#, fuzzy, c-format
+#, c-format
 msgid "Workspace %d"
-msgstr "¿Eliminar panel «%d»?"
+msgstr "Escritorio virtual «%d»"
 
 #: ../plugins/windowlist/windowlist.c:527
 #: ../plugins/windowlist/windowlist.c:533
 msgid "Add workspace"
-msgstr ""
+msgstr "Añadir escritorio virtual"
 
 #: ../plugins/windowlist/windowlist.c:546
-#, fuzzy, c-format
+#, c-format
 msgid "Remove Workspace %d"
-msgstr "¿Eliminar panel «%d»?"
+msgstr "¿Eliminar escritorio virtual «%d»?"
 
 #: ../plugins/windowlist/windowlist.c:547
-#, fuzzy, c-format
+#, c-format
 msgid "Remove Workspace '%s'"
-msgstr "¿Eliminar panel «%d»?"
+msgstr "Eliminar escritorio virtual «%s»"
 
 #. Windowlist Settings
 #: ../plugins/windowlist/windowlist-dialog.c:121
 #: ../plugins/windowlist/windowlist-dialog.c:210
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:2
 msgid "Window List"
-msgstr ""
+msgstr "Lista de ventanas"
 
 #: ../plugins/windowlist/windowlist-dialog.c:148
 msgid ""
 "<i>Urgency notification</i> will blink the button when an application needs "
 "attention."
 msgstr ""
+"El <i>Notificador de urgencia</i> hará que el botón parpadee cuando\n"
+"una aplicación requiere atención."
 
 #. Button Urgency Notification
 #: ../plugins/windowlist/windowlist-dialog.c:155
-#, fuzzy
 msgid "Urgency Notification"
-msgstr "U_sar notificación de arranque"
+msgstr "Notificador de urgencia"
 
 #: ../plugins/windowlist/windowlist-dialog.c:162
 msgid "_Disabled"
-msgstr ""
+msgstr "_Deshabilitado"
 
 #: ../plugins/windowlist/windowlist-dialog.c:171
 msgid "For _other workspaces"
-msgstr ""
+msgstr "Para _otros escritorios virtuales"
 
 #: ../plugins/windowlist/windowlist-dialog.c:180
-#, fuzzy
 msgid "For _all workspaces"
-msgstr "Mostrar t_areas de todos los escritorios virtuales"
+msgstr "P_ara todos los escritorios virtuales"
 
 #: ../plugins/windowlist/windowlist-dialog.c:194
-#, fuzzy
 msgid "_Icon button"
-msgstr "Caja de iconos"
+msgstr "Botón de _iconos"
 
 #: ../plugins/windowlist/windowlist-dialog.c:201
 msgid "A_rrow button"
-msgstr ""
+msgstr "Botón de _flecha"
 
 #: ../plugins/windowlist/windowlist-dialog.c:219
-#, fuzzy
 msgid "Show _windows from all workspaces"
-msgstr "Mostrar t_areas de todos los escritorios virtuales"
+msgstr "Mostrar _ventanas de todos los escritorios virtuales"
 
 #: ../plugins/windowlist/windowlist-dialog.c:228
-#, fuzzy
 msgid "Show a_pplication icons"
-msgstr "Mostrar _nombres de aplicaciones"
+msgstr "Mostrar iconos de a_plicaciones"
 
 #: ../plugins/windowlist/windowlist-dialog.c:237
 msgid "Show wor_kspace actions"
-msgstr ""
+msgstr "Mostrar ac_ciones de escritorio virtual"
 
 #: ../mcs-plugin/plugin.c:46
-#, fuzzy
 msgid "Panel"
-msgstr "Panel %d"
+msgstr "Panel"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
-msgstr ""
+msgstr "Botones de acción"
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
 msgid "Log out or lock the screen"
@@ -765,11 +752,11 @@ msgstr "Añade un espacio o una línea entre elementos del panel"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
 msgid "Show Desktop"
-msgstr ""
+msgstr "Mostrar escritorio"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
 msgid "Toggle desktop show/hide"
-msgstr ""
+msgstr "Mostrar/ocultar escritorio"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Show notification icons"
@@ -781,7 +768,7 @@ msgstr "Mostrar todas las aplicaciones en ejecución"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Show list of available windows"
-msgstr ""
+msgstr "Mostrar lista de ventanas disponibles"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
 msgid "Test Plugin"
@@ -792,9 +779,8 @@ msgid "This plugin has no purpose"
 msgstr "Este complemento no tiene propósito"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
-#, fuzzy
 msgid "Xfce 4 Panel Manager"
-msgstr "Tipo de panel"
+msgstr "Gestor de panel de Xfce 4"
 
 #~ msgid "Size"
 #~ msgstr "Tamaño"
