--- a/po/fr.po
+++ b/po/fr.po
@@ -1,4 +1,4 @@
-# French translations for xfce4-panel package.
+# French translation of the xfce4-panel package.
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Olivier Fourdan <fourdan@xfce.org>, 2004.
