--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -48,7 +48,7 @@
 	* de.po: Updated German translations
 	* ka.po: Add Georgian translations
 
-2006-08-26  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-08-26  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Updated Greek translations
 	
@@ -85,7 +85,7 @@
 	* eo.po: Updated Esperanto translations by
 	  Antono Vasiljev <antonalist@gmail.com>
 
-2006-08-04  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-08-04  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Greek translation update.
 
@@ -135,7 +135,7 @@
 
 	* ja.po: Updated Japanese translations.
 
-2006-05-20  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-05-20  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Greek translation update.
 
@@ -181,7 +181,7 @@
 
 	* pt_BR.po: Updated Brazilian Portuguese translations.
 
-2006-05-06  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-05-06  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Updated Greek translation.
 
@@ -263,7 +263,7 @@
 
 	* eu.po: Basque translation update.
 
-2006-04-24  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-04-24  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Greek translation update
 
@@ -291,7 +291,7 @@
 
 	* he.po: Hebrew translations update.
 
-2006-04-17  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-04-17  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Greek translations update.
 
@@ -327,7 +327,7 @@
 	  <jari.rahkonen@pp2.inet.fi>.
 	* xfce4-panel.pot, *.po: Updated.
 
-2006-04-01  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-04-01  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Greek translations update & polish by Stathis Kamperis
 	  <ekamperi@auth.gr>
@@ -412,7 +412,7 @@
 
 	* *.po: Update API docs and translations
 
-2006-02-25  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-02-25  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Updated Greek translation
 
@@ -471,7 +471,7 @@
 
 	* he.po: Update Hebrew translations.
 
-2006-02-05  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-02-05  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Updated Greek translations
 
@@ -531,7 +531,7 @@
 
 	* pt_BR.po: Updated pt_BR translations for xfce4-panel.
 
-2006-01-05  Stavros Giannouris <stavrosg2002@freemail.gr>
+2006-01-05  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Updated Greek translation
 
@@ -547,7 +547,7 @@
 
 	* xfce4-panel.pot, *.po: update po files.
 
-2005-12-11  Stavros Giannouris <stavrosg2002@freemail.gr>
+2005-12-11  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Updated Greek translations.
 
@@ -563,7 +563,7 @@
 
 	* xfce4-panel.pot, *.po: Updated.
 
-2005-11-21  Stavros Giannouris <stavrosg2002@freemail.gr>
+2005-11-21  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Update Greek Panel translations.
 
@@ -650,7 +650,7 @@
 
 	* zh_TW.po: Update zh_TW translations
 
-2005-10-09  Stavros Giannouris <stavrosg2002@freemail.gr>
+2005-10-09  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Minor panel translation update
 
@@ -664,7 +664,7 @@
 	* de.po: Updated German translations by Fabian Nowak
 	  <timystery@arcor.de>.
 
-2005-10-06  Stavros Giannouris <stavrosg2002@freemail.gr>
+2005-10-06  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Minor updates & polishing for the Greek translations
 
@@ -672,7 +672,7 @@
 
 	* zh_TW.po: Update xfce4-panel zh_TW translations
 
-2005-09-30  Stavros Giannouris <stavrosg2002@freemail.gr>
+2005-09-30  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Updated EL translations for xfce4-panel/trunk
 
