--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,11 @@
+2006-12-15  Pau Rul-lan Ferragut <paurullan@bulma.net>
+
+    * ca.po: Updated Catalan translation
+      by Carles Muñoz Gorriz <carlesmu@ya.com>
+
+    * cs.po: Updated Czech translations
+      by Michal Varady <miko.vaji@gmail.com>
+
 2006-12-11  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* ca.po: Updated the Catalan translation by
