update for Punjabi Translation
(Old svn revision: 24117)

--- a/po/pa.po
+++ b/po/pa.po
@@ -1,57 +1,56 @@
+# translation of pa.po to Punjabi
 # Punjabi translations for xfce4-panel package.
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
-# Amanpreet Singh Alam <aalam@redhat.com>, 2004.
 #
+# Amanpreet Singh Alam <aalam@redhat.com>, 2004.
+# A S Alam <apbrar@gmail.com>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.99.2\n"
+"Project-Id-Version: pa\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-12 17:05+0200\n"
-"PO-Revision-Date: 2005-09-29 20:36+0900\n"
-"Last-Translator: Amanpreet Singh Alam <aalam@redhat.com>\n"
+"PO-Revision-Date: 2006-12-15 22:41+0530\n"
+"Last-Translator: A S Alam <apbrar@gmail.com>\n"
 "Language-Team: Punjabi <fedora-trans-pa@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.3.1\n"
-"Plural-Forms: Plural-Forms: Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: KBabel 1.11.4\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "\n"
 
 #: ../config/launcher-7.rc.in.h:1
-#, fuzzy
 msgid "Command Prompt"
-msgstr "ਕਮਾਂਡ:"
+msgstr "ਕਮਾਂਡ ਪਰਾਉਂਟ"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
-msgstr ""
+msgstr "X ਟਰਮੀਨਲ ਈਮੁਲੇਟਰ"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
-msgstr ""
+msgstr "ਪਾਠ ਫਾਇਲਾਂ ਸੋਧ"
 
 #: ../config/launcher-8.rc.in.h:2 ../plugins/launcher/launcher-dialog.c:102
 msgid "Editor"
 msgstr "ਸੰਪਾਦਕ"
 
 #: ../config/launcher-9.rc.in.h:1
-#, fuzzy
 msgid "File Manager"
-msgstr "ਫਾਇਲ ਪ੍ਰਬੰਧਨ"
+msgstr "ਫਾਇਲ ਮੈਨੇਜਰ"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
-msgstr ""
+msgstr "ਫਾਇਲਾਂ ਅਤੇ ਫੋਲਡਰ ਪ੍ਰਬੰਧ"
 
 #: ../config/launcher-10.rc.in.h:1
 msgid "Surf the internet"
-msgstr ""
+msgstr "ਇੰਟਰਨੈੱਟ ਵੇਖੋ"
 
 #: ../config/launcher-10.rc.in.h:2
-#, fuzzy
 msgid "Web Browser"
-msgstr "ਸਹਾਇਤਾ ਝਲਕਾਰਾ"
+msgstr "ਵੈੱਬ ਬਰਾਊਂਜ਼ਰ"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:175
@@ -60,9 +59,9 @@ msgid "An item was unexpectedly removed: \"%s\"."
 msgstr ""
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:573
-#, fuzzy, c-format
+#, c-format
 msgid "Remove \"%s\"?"
-msgstr "_ਹਟਾਓ"
+msgstr "ਕੀ \"%s\" ਹਟਾਉਣਾ ਹੈ?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:576 ../panel/panel-app.c:750
 #: ../panel/panel-app.c:782 ../panel/panel-app.c:815
@@ -72,8 +71,7 @@ msgid "Xfce Panel"
 msgstr "Xfce ਪੈਨਲ"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:578
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
+msgid "The item will be removed from the panel and its configuration will be lost."
 msgstr ""
 
 #. configure, hide by default
@@ -87,24 +85,21 @@ msgid "About"
 msgstr ""
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:796
-#, fuzzy
 msgid "Move"
-msgstr "_ਹਟਾਓ"
+msgstr "ਭੇਜੋ"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:816
-#, fuzzy
 msgid "Remove"
-msgstr "_ਹਟਾਓ"
+msgstr "ਹਟਾਓ"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:833
-#, fuzzy
 msgid "Add New Item"
-msgstr "ਨਵੀਂ ਇਕਾਈ ਸ਼ਾਮਿਲ ਕਰੋ"
+msgstr "ਨਵੀਂ ਇਕਾਈ ਸ਼ਾਮਿਲ"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:845 ../panel/panel.c:662
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:1
 msgid "Customize Panel"
-msgstr ""
+msgstr "ਪਸੰਦੀਦਾ ਪੈਨਲ"
 
 #: ../panel/panel.c:673
 msgid "Add Items"
@@ -115,19 +110,16 @@ msgid "Quit"
 msgstr ""
 
 #: ../panel/panel.c:699
-#, fuzzy
 msgid "Restart"
-msgstr "_ਮੁੜ ਚਾਲੂ"
+msgstr "ਮੁੜ-ਚਾਲੂ"
 
 #: ../panel/panel.c:713
-#, fuzzy
 msgid "About the Xfce Panel"
-msgstr "Xfce ਪੈਨਲ"
+msgstr "Xfce ਪੈਨਲ ਬਾਰੇ"
 
 #: ../panel/panel-app.c:243 ../panel/panel-app.c:752
-#, fuzzy
 msgid "Exit Xfce Panel?"
-msgstr "Xfce ਪੈਨਲ"
+msgstr "ਕੀ Xfce ਪੈਨਲ ਬੰਦ ਕਰਨਾ ਹੈ?"
 
 #: ../panel/panel-app.c:753
 msgid "You can't remove the last panel. Would you like to exit the program?"
@@ -147,7 +139,7 @@ msgid "Developer"
 msgstr ""
 
 #: ../panel/main.c:46
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " Xfce Panel %s\n"
@@ -159,13 +151,12 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-" Xfce ਪੈਨਲ\n"
-" ਵਰਜਨ %s\n"
+" Xfce ਪੈਨਲ %s\n"
 "\n"
-" Xfce ਵਿਹੜਾ ਵਾਤਾਵਰਨ ਦਾ ਭਾਗ\n"
+" Xfce ਡਿਸਕਟਾਪ ਇੰਵਾਰਇਨਮਿੰਟ\n"
 " http://www.xfce.org\n"
 "\n"
-" GNU GPL ਲਾਈਸੈਂਸ ਅਧੀਨ\n"
+" GNU GPL ਲਾਈਸੈਂਸ ਨਾਲ\n"
 "\n"
 
 #: ../panel/main.c:52
@@ -191,9 +182,9 @@ msgid ""
 msgstr ""
 
 #: ../panel/panel-dialogs.c:179
-#, fuzzy, c-format
+#, c-format
 msgid "Could not open \"%s\" module"
-msgstr "ਪੈਨਲ ਇਕਾਈ \"%s\" ਬਣਾਈ ਨਹੀਂ ਜਾ ਸਕੀ ਹੈ"
+msgstr "ਮੋਡੀਊਲ \"%s\" ਖੋਲ੍ਹਿਆ ਨਹੀਂ ਜਾ ਸਕਿਆ"
 
 #: ../panel/panel-dialogs.c:588
 msgid "Add Items to the Panel"
@@ -218,9 +209,8 @@ msgid "Full Width"
 msgstr ""
 
 #: ../panel/panel-dialogs.c:868 ../panel/panel-dialogs.c:1092
-#, fuzzy
 msgid "Span Monitors"
-msgstr "ਸੰਪਾਦਕ"
+msgstr "ਸਪੈਮ ਮਾਨੀਟਰ"
 
 #: ../panel/panel-dialogs.c:928 ../panel/panel-dialogs.c:1157
 msgid "Left"
@@ -244,23 +234,20 @@ msgid "Position"
 msgstr "ਸਥਿਤੀ"
 
 #: ../panel/panel-dialogs.c:979
-#, fuzzy
 msgid "Fixed Position"
-msgstr "ਸਥਿਤੀ"
+msgstr "ਸਥਿਤੀ ਸਥਿਤੀ"
 
 #: ../panel/panel-dialogs.c:985
 msgid "Freely Moveable"
 msgstr ""
 
 #: ../panel/panel-dialogs.c:1100
-#, fuzzy
 msgid "Auto_hide"
-msgstr "ਸਵੈ-ਲੁਕਵਾਂ"
+msgstr "ਆਟੋ-ਓਹਲੇ(_h)"
 
 #: ../panel/panel-dialogs.c:1118
-#, fuzzy
 msgid "Orientation:"
-msgstr "ਪੈਨਲ ਸਥਿਤੀ:"
+msgstr "ਸਥਿਤੀ:"
 
 #: ../panel/panel-dialogs.c:1130
 msgid "Horizontal"
@@ -271,19 +258,16 @@ msgid "Vertical"
 msgstr "ਲੰਬਕਾਰੀ"
 
 #: ../panel/panel-dialogs.c:1141
-#, fuzzy
 msgid "Handle:"
-msgstr "ਸਥਿਤੀ"
+msgstr "ਹੈਂਡਲ:"
 
 #: ../panel/panel-dialogs.c:1153
-#, fuzzy
 msgid "At both sides"
-msgstr "ਸਵੈ-ਲੁਕਵਾਂ"
+msgstr "ਦੋਵੇਂ ਪਾਸੇ"
 
 #: ../panel/panel-dialogs.c:1234
-#, fuzzy
 msgid "Select Monitor"
-msgstr "ਸੰਪਾਦਕ"
+msgstr "ਮਾਨੀਟਰ ਚੁਣੋ"
 
 #. Button Layout
 #: ../panel/panel-dialogs.c:1352 ../plugins/clock/clock.c:459
@@ -307,45 +291,38 @@ msgstr ""
 
 #: ../panel/panel-dialogs.c:1449 ../panel/panel-dialogs.c:1485
 #: ../panel/panel-dialogs.c:1510
-#, fuzzy, c-format
+#, c-format
 msgid "Panel %d"
-msgstr "Xfce ਪੈਨਲ"
+msgstr "ਪੈਨਲ %d"
 
 #: ../panel/panel-dialogs.c:1529
-#, fuzzy
 msgid "Remove Panel"
-msgstr "_ਹਟਾਓ"
+msgstr "ਪੈਨਲ ਹਟਾਓ"
 
 #: ../panel/panel-dialogs.c:1542
-#, fuzzy
 msgid "New Panel"
-msgstr "Xfce ਪੈਨਲ"
+msgstr "ਨਵਾਂ ਪੈਨਲ"
 
 #: ../panel/panel-dialogs.c:1599
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:2
-#, fuzzy
 msgid "Panel Manager"
-msgstr "ਪੈਨਲ ਆਕਾਰ:"
+msgstr "ਪੈਨਲ ਮੈਨੇਜਰ"
 
 #: ../plugins/actions/actions.c:383
-#, fuzzy
 msgid "Panel Actions"
-msgstr "Xfce ਪੈਨਲ ਵਿਵਸਥਾ"
+msgstr "ਪੈਨਲ ਕਾਰਵਾਈ"
 
 #: ../plugins/actions/actions.c:409
-#, fuzzy
 msgid "Select action type:"
-msgstr "ਕਮਾਂਡ ਚੁਣੋ"
+msgstr "ਕਾਰਵਾਈ ਕਿਸਮ ਚੁਣੋ:"
 
 #: ../plugins/actions/actions.c:418
-#, fuzzy
 msgid "Lock screen"
-msgstr "ਪਰਦਾ _ਤਾਲਾ"
+msgstr "ਸਕਰੀਲ ਲਾਕ"
 
 #: ../plugins/actions/actions.c:419
-#, fuzzy
 msgid "Quit + Lock screen"
-msgstr "ਪਰਦਾ _ਤਾਲਾ"
+msgstr "ਬੰਦ ਕਰੋ + ਸਕਰੀਨ ਲਾਕ"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -356,14 +333,12 @@ msgstr "ਪਰਦਾ _ਤਾਲਾ"
 #. * %Y  : four digit year
 #.
 #: ../plugins/clock/clock.c:121
-#, fuzzy
 msgid "%A %d %B %Y"
-msgstr "%A, %d %B %Y"
+msgstr "%A %d %B %Y"
 
 #: ../plugins/clock/clock.c:446 ../plugins/clock/clock.desktop.in.in.h:1
-#, fuzzy
 msgid "Clock"
-msgstr "ਤਾਲਾ"
+msgstr "ਘੜੀ"
 
 #. Keep order in sync with XfceClockMode
 #: ../plugins/clock/clock.c:471
@@ -380,7 +355,7 @@ msgstr "ਐਲਈਡੀ"
 
 #: ../plugins/clock/clock.c:478 ../plugins/systray/systray.c:400
 msgid "Show _frame"
-msgstr ""
+msgstr "ਫਰੇਮ ਵੇਖਾਓ(_f)"
 
 #: ../plugins/clock/clock.c:485
 msgid "Clock Options"
@@ -388,12 +363,11 @@ msgstr ""
 
 #: ../plugins/clock/clock.c:493
 msgid "Use 24-_hour clock"
-msgstr ""
+msgstr "24-ਘੰਟੇ ਘੜੀ ਵੇਖਾਓ(_h)"
 
 #: ../plugins/clock/clock.c:500
-#, fuzzy
 msgid "Show AM/PM"
-msgstr "ਪੂਃਦੁਃ/ਬਾਃਦੁਃ"
+msgstr "AM/PM ਵੇਖਾਓ"
 
 #: ../plugins/clock/clock.c:507
 msgid "Display seconds"
@@ -405,19 +379,17 @@ msgid "Icon Box"
 msgstr ""
 
 #: ../plugins/iconbox/iconbox.c:830
-#, fuzzy
 msgid "Only show minimized applications"
-msgstr "ਕਾਰਜ _ਨਾਂ ਵਿਖਾਓ"
+msgstr "ਸਿਰਫ਼ ਘੱਟੋ-ਘੱਟ ਕਾਰਜ ਵੇਖਾਓ"
 
 #: ../plugins/iconbox/iconbox.c:839
-#, fuzzy
 msgid "Show applications of all workspaces"
-msgstr "ਸਾਰੇ ਵਰਕਸਪੇਸਾਂ ਵਿੱਚ ਕਾਰਜ ਵਿਖਾਓ"
+msgstr "ਸਭ ਵਰਕਸਪੇਸਾਂ ਦੇ ਕਾਰਜ ਵੇਖਾਓ"
 
 #: ../plugins/launcher/launcher.c:373 ../plugins/launcher/launcher.c:435
-#, fuzzy, c-format
+#, c-format
 msgid "Could not run \"%s\""
-msgstr "ਪੈਨਲ ਇਕਾਈ \"%s\" ਬਣਾਈ ਨਹੀਂ ਜਾ ਸਕੀ ਹੈ"
+msgstr "\"%s\" ਨੂੰ ਚਲਾਇਆ ਨਹੀਂ ਜਾ ਸਕਿਆ"
 
 #: ../plugins/launcher/launcher.c:398
 #, c-format
@@ -426,14 +398,12 @@ msgstr ""
 
 #: ../plugins/launcher/launcher.c:673 ../plugins/launcher/launcher.c:1300
 #: ../plugins/launcher/launcher-dialog.c:1167
-#, fuzzy
 msgid "New Item"
-msgstr "ਨਵੀਂ ਇਕਾਈ ਸ਼ਾਮਿਲ ਕਰੋ"
+msgstr "ਨਵੀਂ ਇਕਾਈ"
 
 #: ../plugins/launcher/launcher.c:747 ../plugins/launcher/launcher.c:1301
-#, fuzzy
 msgid "This item has not yet been configured"
-msgstr "ਇਸ ਇਕਾਈ ਲਈ ਕੋਈ ਸੰਰਚਨਾ ਚੋਣ ਸ਼ਾਮਿਲ ਨਹੀਂ ਹੈ"
+msgstr "ਇਹ ਇਕਾਈ ਹਾਲੇ ਸੰਰਚਿਤ ਨਹੀਂ ਹੈ"
 
 #: ../plugins/launcher/launcher-dialog.c:101
 msgid "Default"
@@ -492,41 +462,36 @@ msgid "Development"
 msgstr ""
 
 #: ../plugins/launcher/launcher-dialog.c:413
-#, fuzzy
 msgid "Select image file"
-msgstr "ਫਾਇਲ ਚੁਣੋ"
+msgstr "ਚਿੱਤਰ ਫਾਇਲ ਚੁਣੋ"
 
 #: ../plugins/launcher/launcher-dialog.c:459
 msgid "Select command"
 msgstr "ਕਮਾਂਡ ਚੁਣੋ"
 
 #: ../plugins/launcher/launcher-dialog.c:482
-#, fuzzy
 msgid "Name"
-msgstr "ਖੇਡਾਂ"
+msgstr "ਨਾਂ"
 
 #: ../plugins/launcher/launcher-dialog.c:500
-#, fuzzy
 msgid "Description"
-msgstr "ਸਥਿਤੀ"
+msgstr "ਵੇਰਵਾ"
 
 #: ../plugins/launcher/launcher-dialog.c:555
 msgid "Other..."
 msgstr ""
 
 #: ../plugins/launcher/launcher-dialog.c:653
-#, fuzzy
 msgid "Command"
-msgstr "ਕਮਾਂਡ:"
+msgstr "ਕਮਾਂਡ"
 
 #: ../plugins/launcher/launcher-dialog.c:689
 msgid "Run in _terminal"
 msgstr "_ਟਰਮੀਨਲ ਵਿੱਚ ਚਲਾਉ"
 
 #: ../plugins/launcher/launcher-dialog.c:707
-#, fuzzy
 msgid "Use _startup notification"
-msgstr "ਸ਼ੁਰੂਆਤੀ _ਇਸ਼ਾਰਾ ਵਰਤੋਂ"
+msgstr "ਸ਼ੁਰੂਆਤੀ ਸੂਚਨਾ ਵਰਤੋਂ(_s)"
 
 #: ../plugins/launcher/launcher-dialog.c:1289
 msgid ""
@@ -535,9 +500,8 @@ msgid ""
 msgstr ""
 
 #: ../plugins/launcher/launcher-dialog.c:1332
-#, fuzzy
 msgid "Program Launcher"
-msgstr "ਸ਼ੁਰੂਆਤੀ ਨਾਲ ਮੇਨੂ ਸ਼ਾਮਿਲ ਕਰੋ"
+msgstr "ਪ੍ਰੋਗਰਾਮ ਲਾਂਚਰ"
 
 #: ../plugins/launcher/launcher-dialog.c:1421
 #: ../plugins/launcher/launcher-dialog.c:1522
@@ -578,14 +542,12 @@ msgstr ""
 
 #: ../plugins/separator/separator.c:255
 #: ../plugins/separator/separator.desktop.in.in.h:2
-#, fuzzy
 msgid "Separator or Spacing"
-msgstr "ਵੱਖਰੇਵਾਂ"
+msgstr "ਵੱਖਰੇਵਾਂ ਜਾਂ ਖਾਲੀ ਥਾਂ"
 
 #: ../plugins/separator/separator.c:277
-#, fuzzy
 msgid "_Draw Separator"
-msgstr "ਵੱਖਰੇਵਾਂ"
+msgstr ""
 
 #: ../plugins/separator/separator.c:286
 msgid "_Expand"
@@ -615,9 +577,8 @@ msgstr ""
 
 #: ../plugins/tasklist/tasklist.c:406 ../plugins/tasklist/tasklist.c:477
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
-#, fuzzy
 msgid "Task List"
-msgstr "ਕਾਰਜ"
+msgstr "ਟਾਸਕ ਲਿਸਟ"
 
 #: ../plugins/tasklist/tasklist.c:440
 msgid "Minimum Width:"
@@ -640,19 +601,16 @@ msgid "Show application _names"
 msgstr "ਕਾਰਜ _ਨਾਂ ਵਿਖਾਓ"
 
 #: ../plugins/tasklist/tasklist.c:505
-#, fuzzy
 msgid "Never group tasks"
-msgstr "ਕਾਰਜਾਂ ਦੇ ਹਮੇਸ਼ਾ ਸਮੂਹ ਬਣਾਓ"
+msgstr "ਗਰੁੱਪ ਟਾਸਕ ਕਦੇ ਨਾ ਕਰੋ"
 
 #: ../plugins/tasklist/tasklist.c:508
-#, fuzzy
 msgid "Automatically group tasks"
-msgstr "ਕਾਰਜਾਂ ਦੇ ਹਮੇਸ਼ਾ ਸਮੂਹ ਬਣਾਓ"
+msgstr "ਟਾਸਕ ਗਰੁੱਪ ਆਟੋਮੈਟਿਕ"
 
 #: ../plugins/tasklist/tasklist.c:511
-#, fuzzy
 msgid "Always group tasks"
-msgstr "ਕਾਰਜਾਂ ਦੇ ਹਮੇਸ਼ਾ ਸਮੂਹ ਬਣਾਓ"
+msgstr "ਹਮੇਸ਼ਾਂ ਗਰੁੱਪ ਟਾਸਕ"
 
 #: ../plugins/windowlist/windowlist.c:229
 #, c-format
@@ -667,7 +625,7 @@ msgstr ""
 #: ../plugins/windowlist/windowlist.c:425
 #, c-format
 msgid "Workspace %d"
-msgstr ""
+msgstr "ਵਰਕਸਪੇਸ %d"
 
 #: ../plugins/windowlist/windowlist.c:527
 #: ../plugins/windowlist/windowlist.c:533
@@ -699,9 +657,8 @@ msgstr ""
 
 #. Button Urgency Notification
 #: ../plugins/windowlist/windowlist-dialog.c:155
-#, fuzzy
 msgid "Urgency Notification"
-msgstr "ਸ਼ੁਰੂਆਤੀ _ਇਸ਼ਾਰਾ ਵਰਤੋਂ"
+msgstr "ਲਾਜ਼ਮੀ ਸੂਚਨਾ"
 
 #: ../plugins/windowlist/windowlist-dialog.c:162
 msgid "_Disabled"
@@ -712,9 +669,8 @@ msgid "For _other workspaces"
 msgstr ""
 
 #: ../plugins/windowlist/windowlist-dialog.c:180
-#, fuzzy
 msgid "For _all workspaces"
-msgstr "ਸਾਰੇ ਵਰਕਸਪੇਸਾਂ ਵਿੱਚ ਕਾਰਜ ਵਿਖਾਓ"
+msgstr "ਸਭ ਵਰਕਸਪੇਸਾਂ ਲਈ(_a)"
 
 #: ../plugins/windowlist/windowlist-dialog.c:194
 msgid "_Icon button"
@@ -725,41 +681,36 @@ msgid "A_rrow button"
 msgstr ""
 
 #: ../plugins/windowlist/windowlist-dialog.c:219
-#, fuzzy
 msgid "Show _windows from all workspaces"
-msgstr "ਸਾਰੇ ਵਰਕਸਪੇਸਾਂ ਵਿੱਚ ਕਾਰਜ ਵਿਖਾਓ"
+msgstr "ਸਭ ਵਰਕਸਪੇਸਾਂ ਤੋਂ ਝਰੋਖੇ ਵੇਖਾਓ(_w)"
 
 #: ../plugins/windowlist/windowlist-dialog.c:228
-#, fuzzy
 msgid "Show a_pplication icons"
-msgstr "ਕਾਰਜ _ਨਾਂ ਵਿਖਾਓ"
+msgstr "ਕਾਰਜ ਆਈਕਾਨ ਵੇਖਾਓ(_p)"
 
 #: ../plugins/windowlist/windowlist-dialog.c:237
 msgid "Show wor_kspace actions"
 msgstr ""
 
 #: ../mcs-plugin/plugin.c:46
-#, fuzzy
 msgid "Panel"
-msgstr "Xfce ਪੈਨਲ"
+msgstr "ਪੈਨਲ"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
 msgstr ""
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
-#, fuzzy
 msgid "Log out or lock the screen"
-msgstr "ਪਰਦੇ ਤੇ ਤਾਲਾ"
+msgstr "ਲਾਗਆਉਟ ਜਾਂ ਸਕਰੀਨ ਲਾਕ"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr ""
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
-#, fuzzy
 msgid "Show icons of all running applications"
-msgstr "ਕਾਰਜ _ਨਾਂ ਵਿਖਾਓ"
+msgstr "ਸਭ ਚੱਲਦੇ ਕਾਰਜਾਂ ਦੇ ਆਈਕਾਨ ਵੇਖਾਓ"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
 msgid "Launcher"
@@ -786,32 +737,26 @@ msgid "Toggle desktop show/hide"
 msgstr ""
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
-#, fuzzy
 msgid "Show notification icons"
-msgstr "ਕਾਰਜ _ਨਾਂ ਵਿਖਾਓ"
+msgstr "ਨੋਟੀਫਕੇਸ਼ਨ ਆਈਕਾਨ ਵੇਖਾਓ"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
-#, fuzzy
 msgid "Show all running applications"
-msgstr "ਕਾਰਜ _ਨਾਂ ਵਿਖਾਓ"
+msgstr "ਸਭ ਚੱਲਦੇ ਕਾਰਜ ਵੇਖਾਓ"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Show list of available windows"
 msgstr ""
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
-#, fuzzy
 msgid "Test Plugin"
-msgstr "ਸ਼ੁਰੂਆਤੀ"
+msgstr "ਟੈਸਟ ਪਲੱਗਇਨ"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
 msgstr ""
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
-#, fuzzy
 msgid "Xfce 4 Panel Manager"
-msgstr "ਪੈਨਲ ਆਕਾਰ:"
+msgstr "Xfce 4 ਪੈਨਲ ਮੈਨੇਜਰ"
 
-#~ msgid "Size"
-#~ msgstr "ਆਕਾਰ"
