--- a/po/hu.po
+++ b/po/hu.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.99.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-12 17:05+0200\n"
-"PO-Revision-Date: 2006-09-02 09:27+0100\n"
+"PO-Revision-Date: 2006-12-17 19:43+0100\n"
 "Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
 "Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -119,7 +119,7 @@ msgstr "Újraindítás"
 
 #: ../panel/panel.c:713
 msgid "About the Xfce Panel"
-msgstr "Xfce panel névjegy"
+msgstr "Xfce Panel névjegy"
 
 #: ../panel/panel-app.c:243
 #: ../panel/panel-app.c:752
@@ -253,7 +253,7 @@ msgstr "Lent"
 #. position
 #: ../panel/panel-dialogs.c:965
 msgid "Position"
-msgstr "Elhelyezés"
+msgstr "Helyzet"
 
 #: ../panel/panel-dialogs.c:979
 msgid "Fixed Position"
@@ -281,7 +281,7 @@ msgstr "Függőleges"
 
 #: ../panel/panel-dialogs.c:1141
 msgid "Handle:"
-msgstr "Kezelés:"
+msgstr "Fogó:"
 
 #: ../panel/panel-dialogs.c:1153
 msgid "At both sides"
@@ -436,7 +436,7 @@ msgstr "Beállítatlan elem"
 
 #: ../plugins/launcher/launcher-dialog.c:101
 msgid "Default"
-msgstr "Alapértelmezett"
+msgstr "Alap"
 
 #: ../plugins/launcher/launcher-dialog.c:103
 msgid "File management"
@@ -735,7 +735,7 @@ msgstr "Kilépés vagy képernyőzár"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
-msgstr "Idő?"
+msgstr "Pontos idő"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
 msgid "Show icons of all running applications"
@@ -783,7 +783,7 @@ msgstr "Teszt beillesztés"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
-msgstr "E beillesztés célja csak teszt"
+msgstr "E beillesztés teszt célú"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
