--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-19  Nick Schermer <nick@xfce.org>
+
+    * POTFILES.in: Removed the testplugin
+    * xfce4-panel.pot, *.po: Remove the testplugin strings
+
 2006-12-15  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
     * ca.po: Updated Catalan translation
